--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.15",
+    "apollo-cache-inmemory": "^1.2.9",
+    "apollo-cache-persist": "^0.1.1",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
